# byte2beat

./: .gitignore  Dockerfile  README.md  REPORT.md  analyze_datasets.py  create_notebook.py  dashboard.py  docker-compose.yml  inspect_columns.py  inspect_data.py  paper.tex  pyproject.toml  quick_analysis.py  requirements.txt  run.cmd  run_experiment.py  run_stroke_experiment.py  test_out.txt
api/: schemas.py  server.py
docs/: METRICS_GUIDE.md  PLAN-100-risk-bug.md  PLAN-deepmind-cardio.md  PLAN-model-optimization.md  PLAN-project-understanding.md  PLAN-slider-text-inputs.md
models/: X_test.pkl  concept_map.json  eval_metrics.json  model_info.json  unc_model.pkl  uncertainty_model.pkl  xgb_model.pkl  y_test.pkl
models_stroke/: concept_map.json  eval_metrics.json  model_info.json
notebooks/: cardio_hackathon_main.ipynb
scripts/: check_overfitting.py  checklist.py  create_notebook.py  external_validation.py
src/: evaluation.py  narrative_generator.py  utils_data.py  utils_model.py
tests/: check_model_health.py  memory_check.py  retrain_all_light.py  retrain_uncertainty.py  test_dashboard.py  test_models.py  test_platform.py  test_stroke_adapter.py  test_trust.py
uncertaintyml/: __init__.py  cache.py  cli.py  conformal.py  data.py  evaluation.py  interpret.py  models.py  pipeline.py  smart_narrative.py
uncertaintyml/adapters/: __init__.py  diabetes.py  stroke.py
